<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_rectangle">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:src="@drawable/libraryhelp2"
        android:contentDescription="@string/todo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutbookname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="52dp">

        <EditText
            android:id="@+id/bookname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/eg_let_us_c"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/enter_book_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutauthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutbookname"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/authorname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eg_yashwant_kanetkar"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/enter_author_name" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Search_button"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/layoutauthor"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:text="Search" />

</RelativeLayout>